# Hangman-GTK

./: .gitignore  LICENSE.md  README.md  debug_app.sh  meson.build  setup_bin_dir.py
includes/: DialogWindow.hpp  GameInitWindow.hpp  GameManager.hpp  GameWindow.hpp
resources/ui/: HangmanUI.glade  HangmanUI.glade~
src/: DialogWindow.cpp  GameInitWindow.cpp  GameManager.cpp  GameWindow.cpp  main.cpp  meson.build
